Bug 350625. A11y hierarchy not exposed for remote XUL with role. r=ginn.chen, sr=neil, a=beltzner